--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     
 
     <link rel="stylesheet" href="style.css">
-    <title>Daily Planner</title>
+    <title>Daily Planner!</title>
 </head>
 <body>
     <div class="main">
