--- a/index.html
+++ b/index.html
@@ -31,27 +31,27 @@
             <div id="hour0" class="hour">00:00</div>
         </div>
         
-        <div id="task0" class="task"></div> <!-- should be at position 11 -->
-        <div id="task1" class="task"></div> <!-- should be at position 11 -->
-        <div id="task2" class="task"></div> <!-- should be at position 9 -->
-        <div id="task3" class="task"></div> <!-- should be at position 12 -->
-        <div id="task4" class="task"></div> <!-- should not have a defined position -->
-        <div id="task5" class="task"></div> <!-- should not have a defined position -->
-        <div id="task6" class="task"></div> <!-- should not have a defined position -->
-        <div id="task7" class="task"></div> <!-- should not have a defined position -->
-        <div id="task8" class="task"></div> <!-- should not have a defined position -->
-        <div id="task9" class="task"></div> <!-- should not have a defined position -->
-        <div id="task10" class="task"></div> <!-- should not have a defined position -->
-        <div id="task11" class="task"></div> <!-- should be at position 11 -->
-        <div id="task12" class="task"></div> <!-- should be at position 9 -->
-        <div id="task13" class="task"></div> <!-- should be at position 12 -->
-        <div id="task14" class="task"></div> <!-- should not have a defined position -->
-        <div id="task15" class="task"></div> <!-- should not have a defined position -->
-        <div id="task16" class="task"></div> <!-- should not have a defined position -->
-        <div id="task17" class="task"></div> <!-- should not have a defined position -->
-        <div id="task18" class="task"></div> <!-- should not have a defined position -->
-        <div id="task19" class="task"></div> <!-- should not have a defined position -->
-        <div id="task20" class="task"></div> <!-- should not have a defined position -->
+        <div id="task0" class="task"
+        <div id="task1" class="task" draggable="true"></div> 
+        <div id="task2" class="task" draggable="true"></div> 
+        <div id="task3" class="task" draggable="true"></div> 
+        <div id="task4" class="task" draggable="true"></div> 
+        <div id="task5" class="task" draggable="true"></div> 
+        <div id="task6" class="task" draggable="true"></div> 
+        <div id="task7" class="task" draggable="true"></div> 
+        <div id="task8" class="task" draggable="true"></div> 
+        <div id="task9" class="task" draggable="true"></div> 
+        <div id="task10" class="task" draggable="true"></div> 
+        <div id="task11" class="task" draggable="true"></div> 
+        <div id="task12" class="task" draggable="true"></div> 
+        <div id="task13" class="task" draggable="true"></div> 
+        <div id="task14" class="task" draggable="true"></div>  
+        <div id="task15" class="task" draggable="true"></div> 
+        <div id="task16" class="task" draggable="true"></div> 
+        <div id="task17" class="task" draggable="true"></div> 
+        <div id="task18" class="task" draggable="true"></div> 
+        <div id="task19" class="task" draggable="true"></div> 
+        <div id="task20" class="task" draggable="true"></div> 
         
     </div>
     <script src="taskplacer.js" type="module"></script>
