--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div id="hour0" class="hour">00:00</div>
         </div>
         
-        <div id="task0" class="task"
+        <div id="task0" class="task" draggable="true"></div> 
         <div id="task1" class="task" draggable="true"></div> 
         <div id="task2" class="task" draggable="true"></div> 
         <div id="task3" class="task" draggable="true"></div> 
