--- a/index.html
+++ b/index.html
@@ -35,23 +35,23 @@
         </div>
 
         <div class="dropwrapper">
-            <div id="dropzone8" class="dropzone"></div>
-            <div id="dropzone9" class="dropzone"></div>
-            <div id="dropzone10" class="dropzone"></div>
-            <div id="dropzone11" class="dropzone"></div>
-            <div id="dropzone12" class="dropzone"></div>
-            <div id="dropzone13" class="dropzone"></div>
-            <div id="dropzone14" class="dropzone"></div>
-            <div id="dropzone15" class="dropzone"></div>
-            <div id="dropzone16" class="dropzone"></div>
-            <div id="dropzone17" class="dropzone"></div>
-            <div id="dropzone18" class="dropzone"></div>
-            <div id="dropzone19" class="dropzone"></div>
-            <div id="dropzone20" class="dropzone"></div>
-            <div id="dropzone21" class="dropzone"></div>
-            <div id="dropzone22" class="dropzone"></div>
-            <div id="dropzone23" class="dropzone"></div>
-            <div id="dropzone0" class="dropzone"></div>
+            <div id="dropzone8" class="drop-zone"></div>
+            <div id="dropzone9" class="drop-zone"></div>
+            <div id="dropzone10" class="drop-zone"></div>
+            <div id="dropzone11" class="drop-zone"></div>
+            <div id="dropzone12" class="drop-zone"></div>
+            <div id="dropzone13" class="drop-zone"></div>
+            <div id="dropzone14" class="drop-zone"></div>
+            <div id="dropzone15" class="drop-zone"></div>
+            <div id="dropzone16" class="drop-zone"></div>
+            <div id="dropzone17" class="drop-zone"></div>
+            <div id="dropzone18" class="drop-zone"></div>
+            <div id="dropzone19" class="drop-zone"></div>
+            <div id="dropzone20" class="drop-zone"></div>
+            <div id="dropzone21" class="drop-zone"></div>
+            <div id="dropzone22" class="drop-zone"></div>
+            <div id="dropzone23" class="drop-zone"></div>
+            <div id="dropzone0" class="drop-zone"></div>
         </div>
         
         <div id="task0" class="task" draggable="true"></div> 
