--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
 
     <link rel="stylesheet" href="style.css">
-    <title>Daily Planner!!!!</title>
+    <title>Daily Planner</title>
 </head>
 <body>
     <div class="main">
