--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 </head>
 <body>
     <div class="main">
+        <div class="drop-zone later"></div>
         <div class="hourwrapper">
             <div id="hour8" class="hour">8:00</div>
             <div id="hour9" class="hour">9:00</div>
