--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <div class="main">
         <div class="drop-zone later" id="later"></div>
-        <div class="drop-zone trash" id="trash">trash :)</div>
+        <div class="drop-zone trash" id="trash"></div>
         <div class="hourwrapper">
             <div id="hour8" class="hour">8:00</div>
             <div id="hour9" class="hour">9:00</div>
